--- a/Learnings/Learnings.entitlements
+++ b/Learnings/Learnings.entitlements
@@ -2,9 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>com.apple.developer.in-app-payments</key>
+	<array>
+		<string>merchant.com.FirstApplePaySample</string>
+	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>6CWF679Z8N.com.sparkout.test</string>
+		<string>6CWF679Z8N.sharingUserInfo</string>
 	</array>
 </dict>
 </plist>
