--- a/Learnings/Info.plist
+++ b/Learnings/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>This app needs your faceID</string>
 </dict>
 </plist>
