--- a/Learnings/Info.plist
+++ b/Learnings/Info.plist
@@ -23,5 +23,9 @@
 	</dict>
 	<key>NSFaceIDUsageDescription</key>
 	<string>This app needs your faceID</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>This app needs bluetooth connection</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>This app needs bluetooth connection</string>
 </dict>
 </plist>
